# sherlock_bot

./: .coverage  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  SCRIPTS.md  bot.py  coderabbit-prompt.txt  config.py  database.py  install.sh  lint.sh  logger.py  prompt_loader.py  pyproject.toml  rate_limiter.py  start.sh  stop.sh  test.sh  test_coverage_recommendations.md
.claude/: settings.json  settings.local.json
.claude/agents/: backend-architect.md  database-architect.md  mcp-expert.md  ml-engineer.md  sql-pro.md
.claude/commands/: architecture-review.md  lint.md  performance-audit.md  test.md
docs/: ARQUITETURA.md  ARQUITETURA_MELHORIAS.md
prompts/: system_prompt.md
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_database.py  test_prompt_loader.py  test_rate_limiter.py
